fixed overflow issue

--- a/PersonalPortfolio.React/src/index.css
+++ b/PersonalPortfolio.React/src/index.css
@@ -1,11 +1,17 @@
 @import "tailwindcss";
 
+html {
+    overflow-x: hidden;
+}
+
 html, body { 
+    display: flex;
     height: 100%;   
-    width: 100%; 
-    margin: 0; 
-    padding: 0;
+    width: 100%;
+    margin: 0px; 
+    padding: 0px;
     background-color: oklch(84.991% 0.00219 14.769);
+
 }
 
 #root {
@@ -21,7 +27,6 @@ html, body {
     padding: 0;
     width: 100%;
     height: 65%;
-    overflow: visible;
     overflow-x: hidden;
 }
 
