--- a/PersonalPortfolio.React/src/sections/Header/Header.css
+++ b/PersonalPortfolio.React/src/sections/Header/Header.css
@@ -1,3 +1,3 @@
-div#cover-image {
-    align-self: center;
+#cover-image {
+    overflow-x: hidden;
 }
